# maze-transformer

./: .gitignore  README.md  classes.dot  create_dataset.py  eval_model.ipynb  eval_model.py  get_todos.sh  makefile  mazegen.py  notes.md  packages.dot  plot_attention.ipynb  plot_loss.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_generation.py  train_model.py
.github/workflows/: checks.yml  lint.yml
docs/: itodo.yml  todo-inline.html  todo-inline.md
examples/: demo-g6-n10K-a_dfs-h92077.zanj
examples/coverage/: coverage.txt
examples/datasets/: custom-hallway-g8-n100-a_dfs-h20593.zanj
examples/maze/g4-n10/: cfg.json  config.json  maze_tokens.jsonl
examples/maze/g4-n10/g4-n10_tiny-v1_2023-03-28-22-44-54/: model.final.pt
examples/multsrc_demo-g6-n10K-a_dfs-h50618_tiny-v1_sweep-v1_2024-08-20-15-17-32/: config.json  model.final.zanj  wanb-url.txt
examples/multsrc_demo-g6-n10K-a_dfs-h50618_tiny-v1_sweep-v1_2024-08-20-15-17-32/checkpoints/: model.iter_0.zanj  model.iter_15.zanj  model.iter_150.zanj  model.iter_75.zanj
examples/multsrc_demo-g6-n10K-a_dfs-h50618_tiny-v1_sweep-v1_2024-08-21-12-21-39/: config.json  model.final.zanj
examples/multsrc_demo-g6-n10K-a_dfs-h50618_tiny-v1_sweep-v1_2024-08-21-12-21-39/checkpoints/: model.iter_0.zanj  model.iter_15.zanj  model.iter_150.zanj  model.iter_75.zanj
examples/multsrc_demo-g6-n10K-a_dfs-h92077_tiny-v1_sweep-v1_2023-05-20-21-30-02/: config.json  model.final.zanj
examples/multsrc_demo-g6-n10K-a_dfs-h92077_tiny-v1_sweep-v1_2023-05-20-21-30-02/checkpoints/: model.iter_0.zanj  model.iter_78.zanj
examples/old/maze/g4-n10/: maze_tokenized.npz
maze-dataset_test/: README.md  pyproject.toml
maze_transformer/: generators.py  latticemaze.py  mazegen.py  plot.py  tokenizer.py
maze_transformer/dataset/: collected_dataset.py  dataset.py  maze_dataset.py  maze_dataset_configs.py  plot_dataset.py  tokenizer.py
maze_transformer/evaluation/: baseline_models.py  eval_model.py  eval_single_token_tasks.py  load_model_testdata.py  maze_complexity_evals.py  metrics.py  path_evals.py  pathdist.py  plot_attention.py  plot_loss.py  plot_maze.py  plotting.py  util.py
maze_transformer/generation/: constants.py  create.py  generators.py  lattice_maze.py  latticemaze.py  utils.py
maze_transformer/labyrinth/: generate.py  graph.py  grid.py  maze.py
maze_transformer/labyrinth/utils/: abc.py  collections.py  event.py
maze_transformer/mechinterp/: direct_logit_attribution.py  logit_attrib_task.py  logit_diff.py  logit_lens.py  plot_attention.py  plot_logits.py  plot_weights.py  residual_stream_structure.py
maze_transformer/test_helpers/: assertions.py  stub_logger.py
maze_transformer/training/: config.py  dataset.py  eval_model.py  logging_config.py  maze_dataset.py  maze_dataset_configs.py  mazedataset.py  tokenizer.py  train_model.py  train_save_files.py  training.py  wandb_client.py  wandb_logger.py
maze_transformer/utils/: dict_shapes.py  get_pt_model_wandb.py  get_wandb_models.py  notebook_utils.py  padding.py  stable_hash.py  token_utils.py  utils.py
maze_transformer/utils/test_helpers/: assertions.py  run_notebook_tests.py  utils.py
notebooks/: appendix_figures.ipynb  appendix_figures_TEMPCOPY.ipynb  coord_testing.ipynb  demo_001_latticemaze.ipynb  demo_dataset.ipynb  demo_dataset_parallel.ipynb  demo_generator.ipynb  demo_latticemaze.ipynb  demo_wilson.ipynb  direct_logit_attribution.ipynb  dla_report.ipynb  eval.py  eval_across_tasks.ipynb  eval_model.ipynb  eval_results-n256.csv  eval_results-n8.json  eval_tasks_table.ipynb  eval_tasks_table_g6.ipynb  evalstats  generate_rollouts.ipynb  get_wandb_models.ipynb  main_demo.ipynb  plot_attention.ipynb  residual_stream_decoding.ipynb  test_predict.py  train_model.ipynb  train_model_hallway.ipynb  utils.py  wadb_to_zanj.ipynb  wandb_to_zanj.ipynb
notebooks/wip/: test_hf_tokenizer.ipynb  wip_activation_patching.ipynb
scripts/: benchmark.py  benchmark_deduplication.py  create_dataset.py  download_model.py  plot_loss.py  resume_wandb_run.py  test.py  test_generation.py  train_model.py  upload_dataset.py
src/maze_transformer/evaluation/: eval_model.py  pathdist.py  plot_attention.py  plot_loss.py  plot_maze.py
src/maze_transformer/generation/: generators.py  latticemaze.py  utils.py
src/maze_transformer/training/: config.py  dataset.py  mazedataset.py  tokenizer.py  training.py
test/_temp/: collected_dataset_test_save_read.zanj
tests/: conftest.py
tests/_temp/: test_cfg_save.json  test_cfg_save_pretrained_tok.json  test_cfg_save_pretrained_tok_z.zanj  test_cfg_save_z.zanj
tests/helpers/: convert_ipynb_to_script.py  nb1.py  run_notebook_tests.py  stub_logger.py  utils.py
tests/integration/: maze-dataset_branch_test.sh  test_create_dataset.py  test_download_model.py  test_eval_model.py  test_train_model.py  test_train_wandb_model.py  test_training.py
tests/integration/artifacts/ocnb1ec5:v810/: model.iter_126360.pt
tests/integration/maze_transformer/generation/: test_plot_loss.py
tests/integration/maze_transformer/training/: test_dataset.py
tests/maze_transformer/evaluation/eval_model/: test_pad_sequence.py
tests/maze_transformer/generation/: test_generators.py  test_latticemaze.py  test_utils.py
tests/maze_transformer/training/config/: test_base_gpt_config.py  test_top_level_config.py  test_train_config.py
tests/unit/maze_transformer/: test_padding.py  test_tokenizers.py
tests/unit/maze_transformer/dataset/: test_collected_dataset.py
tests/unit/maze_transformer/evaluation/: test_baseline_models.py  (+5 more)
(+29 files in other folders)
