[tool.poetry]
name = "maze-transformer"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "maze_transformer"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
transformer-lens = { git = "https://github.com/neelnanda-io/TransformerLens.git" }
matplotlib = "^3.7.0"
fire = "^0.5.0"
muutils = "^0.3.0"
plotly = "^5.13.1"
circuitsvis = "^1.39.1"
jupyter = "^1.0.0"
wandb = "^0.13.5" # note: TransformerLens forces us to use 0.13.5
[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pycln = "^2.1.3"
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Ignore numpy deprecation warnings triggered by muutils
filterwarnings = [
    # Warning from muutils: https://github.com/mivanit/muutils/issues/1
    "ignore:`np\\.\\w*` is a deprecated alias for:DeprecationWarning",

    # Warning from matplotlib. Issue: https://github.com/matplotlib/matplotlib/issues/25244
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning"
]
norecursedirs="tests/helpers"

[[tool.mypy.overrides]]
module = "fire"
ignore_missing_imports = true

[tool.isort]
profile = "black"
