[tool.poetry]
name = "maze-transformer"
version = "0.0.1"
description = ""
authors = ["Michael Ivanitskiy <miv@knc.ai>", "Dan Valentine <danvalentine256@gmail.com>", "Rusheb Shah <rusheb.shah@gmail.com>", "Lucia Quirke <luciaq@canva.com>", "Can Rager <can.rager@posteo.de>", "Alex Spies <alexfspies@gmail.com>", "Chris Mathwin <cwmathwin@gmail.com>", "Tilman Rauker <traeuker@googlemail.com>", "Guillaume Corlouer <guillaume.corlouer@gmail.com>"]
readme = "README.md"
packages = [{include = "maze_transformer"}]
repository = "https://github.com/AISC-understanding-search/maze-transformer"

[tool.poetry.dependencies]
python = "^3.10"
maze-dataset = "^0.3.3"
torch = "^1.13.1"
transformer-lens = "^1.2.2"
matplotlib = "^3.7.0"
fire = "^0.5.0"
muutils = "^0.5.1"
zanj = "^0.2.0"
plotly = "^5.13.1"
circuitsvis = "^1.39.1"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"
wandb = "^0.13.5" # note: TransformerLens forces us to use 0.13.5
[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pycln = "^2.1.3"
isort = "^5.12.0"
black = "^23.1.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Ignore numpy deprecation warnings triggered by muutils
filterwarnings = [
    # Warning from muutils: https://github.com/mivanit/muutils/issues/1
    "ignore:`np\\.\\w*` is a deprecated alias for:DeprecationWarning",

    # Warning from matplotlib. Issue: https://github.com/matplotlib/matplotlib/issues/25244
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning"
]
testpaths = "tests"
norecursedirs="maze_transformer/utils/test_helpers"

[[tool.mypy.overrides]]
module = "fire"
ignore_missing_imports = true

[tool.isort]
profile = "black"
known_third_party = "wandb"

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"
