[tool.poetry]
name = "maze-transformer"
version = "0.2.0"
description = ""
authors = ["Michael Ivanitskiy <miv@knc.ai>", "Dan Valentine <danvalentine256@gmail.com>", "Rusheb Shah <rusheb.shah@gmail.com>", "Lucia Quirke <luciaq@canva.com>", "Can Rager <can.rager@posteo.de>", "Alex Spies <alexfspies@gmail.com>", "Chris Mathwin <cwmathwin@gmail.com>", "Tilman Rauker <traeuker@googlemail.com>", "Guillaume Corlouer <guillaume.corlouer@gmail.com>"]
readme = "README.md"
packages = [{include = "maze_transformer"}]
repository = "https://github.com/understanding-search/maze-transformer"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# dataset
maze-dataset = "^0.5.6"
# transformers
torch = "^2.4.0"
transformer-lens = "^2.4.0"
# transformers = ">=4.34" # Dependency in transformer-lens 1.14.0
# utils
muutils = "^0.6.7"
zanj = "^0.3.1"
# wandb = "^0.13.5" # note: TransformerLens forces us to use 0.13.5
wandb = "^0.17.5"
fire = "^0.6.0"
typing-extensions = "^4.12.2"
# plotting
matplotlib = "^3.7.0"
plotly = "^5.13.1"
circuitsvis = "^1.39.1"
seaborn = "^0.12.2"
# notebooks
ipykernel = "^6.22.0"
jupyter = "^1.0.0"
# analysis
scipy = "^1.11.3"
scikit-learn = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pycln = "^2.4.0"
isort = "^5.13.2"
black = "^24.4.2"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Ignore numpy deprecation warnings triggered by muutils
filterwarnings = [
    # Warning from muutils: https://github.com/mivanit/muutils/issues/1
    "ignore:`np\\.\\w*` is a deprecated alias for:DeprecationWarning",

    # Warning from matplotlib. Issue: https://github.com/matplotlib/matplotlib/issues/25244
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning"
]
testpaths = "tests"
norecursedirs="maze_transformer/utils/test_helpers"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.mypy.overrides]]
module = "fire"
ignore_missing_imports = true

[tool.isort]
profile = "black"
known_third_party = "wandb"

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"
